@@ -35,8 +35,6 @@ import java.util.List;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import static org.springframework.security.web.util.matcher.AntPathRequestMatcher.antMatcher;
-
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -55,38 +53,27 @@ public class SecurityConfig {
             .authorizeHttpRequests(auth -> {
                 System.out.println("Setting up authorization rules");
                 auth
-                    // Public endpoints
                     .requestMatchers(
-                        antMatcher("/api/auth/login"),
-                        antMatcher("/api/auth/register"),
-                        antMatcher("/api/auth/refresh-token"),
-                        antMatcher("/api/auth/validate"),
-                        antMatcher("/api/auth/test"),
-                        antMatcher("/api/auth/debug-token"),
-                        antMatcher("/api/auth/debug-login"),
-                        antMatcher("/api/auth/create-test-user"),
-                        antMatcher("/api/auth/me"),
-                        antMatcher("/api/debug/**"),
-                        antMatcher("/api/insurance/packages"),
-                        antMatcher("/api/insurance/categories"),
-                        antMatcher("/error")
+                        "/api/auth/login",
+                        "/api/auth/register",
+                        "/api/auth/refresh-token",
+                        "/api/insurance/packages",
+                        "/api/insurance/categories",
+                        "/api/debug/**"
                     ).permitAll()
-                    
-                    // Admin-only endpoints
-                    .requestMatchers(antMatcher("/api/admin/**")).hasAuthority("ROLE_ADMIN")
-                    .requestMatchers(antMatcher("/api/insurance/claims/pending")).hasAuthority("ROLE_ADMIN")
-                    .requestMatchers(antMatcher("/api/insurance/claims/{claimId}/process")).hasAuthority("ROLE_ADMIN")
-                    
-                    // Protected endpoints
+                    .requestMatchers("/api/admin/**").hasAuthority("ROLE_ADMIN")
+                    .requestMatchers("/api/insurance/claims/pending").hasAuthority("ROLE_ADMIN")
+                    .requestMatchers("/api/insurance/claims/{claimId}/process").hasAuthority("ROLE_ADMIN")
                     .requestMatchers(
-                        antMatcher("/api/insurance/policies/**"),
-                        antMatcher("/api/insurance/claims/**"),
-                        antMatcher("/api/insurance/policies"),
-                        antMatcher("/api/insurance/claims")
+                        "/api/auth/me",
+                        "/api/insurance/policies/**",
+                        "/api/insurance/claims/**",
+                        "/api/policies/**",
+                        "/api/claims/**",
+                        "/api/users/**"
                     ).authenticated()
-                    
-                    // Default for anything else
                     .anyRequest().authenticated();
+                System.out.println("Authorization rules configured");
             })
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
@@ -98,41 +85,23 @@ public class SecurityConfig {
                     System.out.println("\n=== Authentication Failure ===");
                     System.out.println("Request URL: " + request.getRequestURI());
                     System.out.println("Method: " + request.getMethod());
-                    System.out.println("Exception type: " + ex.getClass().getName());
                     System.out.println("Error message: " + ex.getMessage());
                     
-                    // Set CORS headers
-                    response.setHeader("Access-Control-Allow-Origin", "http://localhost:3000");
-                    response.setHeader("Access-Control-Allow-Credentials", "true");
-                    response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
-                    response.setHeader("Access-Control-Allow-Headers", "Authorization, Content-Type, X-Requested-With, Accept");
-                    response.setHeader("Access-Control-Expose-Headers", "X-Auth-Error");
-                    response.setContentType("application/json;charset=UTF-8");
-                    
                     response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.setContentType("application/json;charset=UTF-8");
                     response.getWriter().write("{\"message\": \"Authentication failed: " + ex.getMessage() + "\"}");
                 })
                 .accessDeniedHandler((request, response, ex) -> {
-                    Authentication auth = SecurityContextHolder.getContext().getAuthentication();
                     System.out.println("\n=== Access Denied ===");
                     System.out.println("Request URL: " + request.getRequestURI());
-                    System.out.println("User: " + (auth != null ? auth.getName() : "null"));
-                    System.out.println("Authorities: " + (auth != null ? auth.getAuthorities() : "null"));
+                    System.out.println("Method: " + request.getMethod());
                     System.out.println("Error message: " + ex.getMessage());
                     
-                    // Set CORS headers
-                    response.setHeader("Access-Control-Allow-Origin", "http://localhost:3000");
-                    response.setHeader("Access-Control-Allow-Credentials", "true");
-                    response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
-                    response.setHeader("Access-Control-Allow-Headers", "Authorization, Content-Type, X-Requested-With, Accept");
-                    response.setHeader("Access-Control-Expose-Headers", "X-Auth-Error");
-                    response.setContentType("application/json;charset=UTF-8");
-                    
                     response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                    response.getWriter().write("{\"message\": \"Access Denied: " + ex.getMessage() + "\"}");
-                })
-            );
-
+                    response.setContentType("application/json;charset=UTF-8");
+                    response.getWriter().write("{\"message\": \"Access denied: " + ex.getMessage() + "\"}");
+                }));
+        
         return http.build();
     }
 
@@ -147,11 +116,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Auth-Error"));
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:3001", "http://localhost:3002"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"
+        ));
         configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -173,7 +151,7 @@ public class SecurityConfig {
             @Override
             public void addCorsMappings(CorsRegistry registry) {
                 registry.addMapping("/**")
-                    .allowedOrigins("http://localhost:3000")
+                    .allowedOrigins("http://localhost:3000", "http://localhost:3001", "http://localhost:3002")
                     .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")
                     .allowedHeaders("Authorization", "Content-Type", "X-Requested-With", "Accept")
                     .allowCredentials(true);
